--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ cutVideos/6_pcdiga_completo.wav
 cutVideos/7_pcdiga_completo.wav
 outputs/clip-pt.txt
 words.txt
+__pycache__/keywords.cpython-310.pyc
+__pycache__/transcript.cpython-310.pyc
