--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ words.txt
 __pycache__/keywords.cpython-310.pyc
 __pycache__/transcript.cpython-310.pyc
 __pycache__/analysis.cpython-310.pyc
+words.txt
